2004-07-05  Carl Worth  <cworth@isi.edu>

	* src/cairo.c (CAIRO_CHECK_SANITY): Remove errant semicolon from
	macro definition.

2004-06-21  David Reveman  <c99drn@cs.umu.se>

	* configure.in: Require glitz >= 0.1.5.

	* src/cairo_gstate.c (_cairo_gstate_clip_and_composite_trapezoids): 
	Use correct source offset when creating clip surface.

	* src/cairo_gl_surface.c (_cairo_gl_surface_get_image): Use glitz's
	new pixel interface.
	(_cairo_gl_surface_set_image): Use glitz's new pixel interface.
	(_cairo_gl_surface_create_similar): First try to create a drawable
	surface and if that fails, create a read only surface.
	(_cairo_gl_surface_create_similar): Glitz now handles inheritance of
	anti-aliasing hints, so it can be removed from here.
	(_cairo_gl_surface_create_pattern): Temporary fix for gradients.

2004-06-16  Keith Packard  <keithp@keithp.com>

	* src/cairo_xcb_surface.c: (bytes_per_line),
	(_cairo_xcb_surface_set_image):
	Fix image data length computation (XCB doesn't do this part).

2004-06-11  David Reveman  <c99drn@cs.umu.se>

	* configure.in: Require glitz 0.1.4.

	* src/cairo_gl_surface.c: Added CAIRO_GL_SURFACE_MULTISAMPLE macro.
	(_cairo_gl_extract_rectangle): Added _cairo_gl_extract_rectangle.
	(_cairo_gl_surface_composite_trapezoids): Use fill_rectangles if
	we can represent the traps as a rectangle. fill_trapezoids cannot be
	used with software multi-sampling.
	(CAIRO_GL_COMPOSITE_TRAPEZOIDS_SUPPORT): Glitz can no longer composite
	trapezoids just by using offscreen drawing.
	(_cairo_gl_surface_create_similar): Inherit anti-aliasing properties.

	* src/cairo_gstate.c (_cairo_gstate_create_pattern): Get solid color
	from color stop components.

	* src/cairoint.h: Removed cairo color from color stop.

	* src/cairo_pattern.c: Added MULTIPLY_COLORCOMP macro.
	(cairo_pattern_add_color_stop): Do not pre-multiply stop color.
	(_cairo_pattern_calc_color_at_pixel): Multiply with alpha.

2004-05-28  Carl Worth  <cworth@isi.edu>
